[package]
name = "rustwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
